--- a/index.html
+++ b/index.html
@@ -773,45 +773,49 @@ footer span {
   <!-- Hero -->
 <section class="hero" data-aos="fade">
   <div class="container hero-content">
- <img src="Logo.svg" 
-     alt="Logo" 
-     class="hero-logo"
-     data-aos="fade-down"
-     data-aos-delay="100">
-
-<h1 data-aos="fade-up" data-aos-delay="300">
-  Ganzheitliche <span class="highlight-red">Hautgesundheit</span> –<br>
-  <span class="highlight-red">Behandlung</span> & <span class="highlight-red">Ausbildung</span> unter einem Dach
-</h1>
-
-<p data-aos="fade-up" data-aos-delay="500">
-  Für Frauen mit Hautproblemen<br>
-  und für Quereinsteigerinnen & Kosmetikerinnen,<br>
-  die Haut wirklich verstehen möchten.
-</p>
-
-<p data-aos="fade-up" data-aos-delay="550">
-  Ursache statt Oberfläche • fundiertes Wissen • nachhaltige Ergebnisse
-</p>
     
+    <!-- Logo -->
+    <img src="Logo.svg" 
+         alt="Logo" 
+         class="hero-logo"
+         data-aos="fade-down"
+         data-aos-delay="100">
 
+    <!-- Main Heading -->
+    <h1 data-aos="fade-up" data-aos-delay="200">
+      Ganzheitliche <span class="highlight-red">Hautgesundheit</span> –<br>
+      <span class="highlight-red">Behandlung</span> & <span class="highlight-red">Ausbildung</span> unter einem Dach
+    </h1>
 
-<div class="btn-group" data-aos="fade-up" data-aos-delay="700">
-<a href="#sessions" class="cta-btn no-press">Jetzt Behandlung buchen</a>
-<a href="#course-choice" class="cta-btn no-press">Zur Academy & Ausbildung</a>
-</div>
+    <!-- Subtitle / Description -->
+    <p data-aos="fade-up" data-aos-delay="300">
+      Für Frauen mit Hautproblemen<br>
+      und für Quereinsteigerinnen & Kosmetikerinnen,<br>
+      die Haut wirklich verstehen möchten.
+    </p>
+
+    <p data-aos="fade-up" data-aos-delay="400">
+      Ursache statt Oberfläche • fundiertes Wissen • nachhaltige Ergebnisse
+    </p>
+
+    <!-- Buttons -->
+    <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
+      <a href="#sessions" class="cta-btn no-press">Jetzt Behandlung buchen</a>
+      <a href="#course-choice" class="cta-btn no-press">Zur Academy & Ausbildung</a>
+    </div>
+
   </div>
-  
-  
 </section>
 
 <!-- Combined Section: Warum ein anderer Weg + Unser Ansatz with alternating slide-in bullets -->
 <section id="why-and-approach">
   <div class="container">
+    <!-- Section Title -->
     <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">
       WARUM EIN <span class="highlight-red">ANDERER WEG?</span>
     </h2>
 
+    <!-- Paragraphs -->
     <p class="centered-text" data-aos="fade-up" data-aos-delay="200">
       Kurzfristige Effekte, wechselnde Produkte und Behandlungen ohne klares Hautverständnis führen oft dazu, dass Hautprobleme nicht nachhaltig gelöst werden.
     </p>
@@ -820,6 +824,7 @@ footer span {
       Bei <strong>Only Beauty</strong> gehen wir tiefer. Wir betrachten Haut <span class="highlight-red">ganzheitlich</span> – ruhig, fundiert und individuell.
     </p>
 
+    <!-- Subtitle -->
     <h3 class="section-subtitle" data-aos="fade-up" data-aos-delay="400">
       UNSER ANSATZ
     </h3>
@@ -829,6 +834,7 @@ footer span {
       Hautgesundheit ist kein Zufall. Sie entsteht durch Analyse, Wissen und individuell abgestimmte Konzepte.
     </p>
 
+    <!-- Approach list -->
     <div class="approach-list">
       <ul>
         <li data-aos="fade-right" data-aos-delay="600">Ursachen erkennen statt Symptome überdecken</li>
@@ -963,32 +969,46 @@ footer span {
 <!-- Sessions -->
 <section id="sessions">
   <div class="container">
+    <!-- Section Title -->
     <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">
       FÜR KUNDINNEN – <span class="highlight-red">BEHANDLUNGEN</span>
     </h2>
 
     <div class="services-grid">
-      <div class="service-card service-featured choice-good" data-aos="fade-up" data-aos-delay="200" style="text-align:center;">
+      <!-- Service Card -->
+      <div class="service-card service-featured choice-good" style="text-align:center;">
         
-        <p style="margin-bottom:1.5rem; font-weight:500;">
+        <!-- Card Intro Paragraph -->
+        <p style="margin-bottom:1.5rem; font-weight:500;"
+           data-aos="fade-up" data-aos-delay="200">
           Individuelle Behandlungen für gesunde, stabile Haut<br>
           Unsere Behandlungen basieren auf einer fundierten Hautanalyse<br>
           und werden exakt auf dein Hautbild abgestimmt.
         </p>
 
-        <h3 style="margin-bottom:1rem;">Geeignet bei:</h3>
+        <!-- Card Subtitle -->
+        <h3 style="margin-bottom:1rem;" data-aos="fade-up" data-aos-delay="300">
+          Geeignet bei:
+        </h3>
+
+        <!-- List -->
         <ul class="choice-good-list" style="list-style:none; padding-left:0; margin-bottom:1.5rem;">
-          <li>• Unreiner oder Entzündlicher haut</li>
-          <li>• Sensibler & Gestresster Haut</li>
-          <li>• Hautbarriere-Störungen</li>
-          <li>• Wunsch nach langfristiger hautverbesserung</li>
+          <li data-aos="fade-up" data-aos-delay="400">• Unreiner oder Entzündlicher Haut</li>
+          <li data-aos="fade-up" data-aos-delay="500">• Sensibler & Gestresster Haut</li>
+          <li data-aos="fade-up" data-aos-delay="600">• Hautbarriere-Störungen</li>
+          <li data-aos="fade-up" data-aos-delay="700">• Wunsch nach langfristiger Hautverbesserung</li>
         </ul>
 
-        <p style="margin-bottom:1.5rem; font-weight:500;">
+        <!-- Card Outro Paragraph -->
+        <p style="margin-bottom:1.5rem; font-weight:500;"
+           data-aos="fade-up" data-aos-delay="800">
           Ziel ist kein kurzfristiger Effekt, sondern nachhaltige Hautgesundheit.
         </p>
 
-        <a href="#contact" class="cta-btn">Jetzt Hautanalyse & Termin buchen</a>
+        <!-- CTA Button -->
+        <a href="#contact" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
+          Jetzt Hautanalyse & Termin buchen
+        </a>
       </div>
     </div>
   </div>
@@ -997,10 +1017,12 @@ footer span {
 <!-- Course Choice -->
 <section id="course-choice">
   <div class="container">
+    <!-- Section Title -->
     <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">
       FÜR ZUKÜNFTIGE <span class="highlight-red">HAUTEXPERTINNEN – ACADEMY</span>
     </h2>
 
+    <!-- Intro Paragraphs -->
     <p class="centered-text" data-aos="fade-up" data-aos-delay="200">
       Dein Einstieg in die Hautexpertise – auch ohne Vorkenntnisse
     </p>
@@ -1024,36 +1046,45 @@ footer span {
       Strukturiert, praxisnah und verständlich aufgebaut.
     </p>
 
+    <!-- Subtitle -->
     <h3 class="section-subtitle" data-aos="fade-up" data-aos-delay="400">
       ENTSCHEIDUNG – DEIN WEG
     </h3>
 
-<div class="choices">
-  <!-- Option A: Bad / Status quo -->
-  <div class="choice-card choice-bad" data-aos="fade-up">
-    <h3>Option A: Bleib beim Status quo</h3>
-    <p>Du bleibst in deinem 9-to-5 Job, kommst finanziell kaum voran und lebst deinen Traum nie wirklich.</p>
-    <p class="choice-bad-list">
-      • Feste Arbeitszeiten<br>
-      • Begrenztes Einkommen<br>
-      • Keine persönliche Entwicklung<br>
-      • Abhängigkeit von anderen
-    </p>
-  </div>
+    <!-- Choice Cards -->
+    <div class="choices">
+      <!-- Option A: Bad / Status quo -->
+      <div class="choice-card choice-bad" data-aos="fade-up" data-aos-delay="500">
+        <h3 data-aos="fade-up" data-aos-delay="550">Option A: Bleib beim Status quo</h3>
+        <p data-aos="fade-up" data-aos-delay="600">
+          Du bleibst in deinem 9-to-5 Job, kommst finanziell kaum voran und lebst deinen Traum nie wirklich.
+        </p>
+        <p class="choice-bad-list" data-aos="fade-up" data-aos-delay="650">
+          • Feste Arbeitszeiten<br>
+          • Begrenztes Einkommen<br>
+          • Keine persönliche Entwicklung<br>
+          • Abhängigkeit von anderen
+        </p>
+      </div>
 
-  <!-- Option B: Good / Featured -->
-  <div class="choice-card choice-good choice-featured" data-aos="fade-up">
-    <h3>Option B: Starte jetzt deinen Weg</h3>
-    <p>Werde Skin-Expertin, baue dein eigenes Business auf und lebe deine Leidenschaft selbstbestimmt.</p>
-    <p class="choice-good-list">
-      ✓ Werde zum Hautexperten<br>
-      ✓ Werde deine eigene Chefin<br>
-      ✓ Deutlich höheres Einkommen<br>
-      ✓ Freiheit & Erfüllung
-    </p>
-    <a href="#" class="cta-btn">Ja, ich will erfolgreicher Skin Expert werden</a>
+      <!-- Option B: Good / Featured -->
+      <div class="choice-card choice-good choice-featured" data-aos="fade-up" data-aos-delay="700">
+        <h3 data-aos="fade-up" data-aos-delay="750">Option B: Starte jetzt deinen Weg</h3>
+        <p data-aos="fade-up" data-aos-delay="800">
+          Werde Skin-Expertin, baue dein eigenes Business auf und lebe deine Leidenschaft selbstbestimmt.
+        </p>
+        <p class="choice-good-list" data-aos="fade-up" data-aos-delay="850">
+          ✓ Werde zum Hautexperten<br>
+          ✓ Werde deine eigene Chefin<br>
+          ✓ Deutlich höheres Einkommen<br>
+          ✓ Freiheit & Erfüllung
+        </p>
+        <a href="#" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
+          Ja, ich will erfolgreicher Skin Expert werden
+        </a>
+      </div>
+    </div>
   </div>
-</div>
 </section>
 
 <!-- Warum Only Beauty Section (Single Animated Card) -->
