--- a/index.html
+++ b/index.html
@@ -1006,9 +1006,9 @@ footer span {
         </p>
 
         <!-- CTA Button -->
-        <a href="#contact" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
-          Jetzt Hautanalyse & Termin buchen
-        </a>
+<a href="https://calendly.com/" target="_blank" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
+  Jetzt Hautanalyse & Termin buchen
+</a>
       </div>
     </div>
   </div>
@@ -1079,9 +1079,9 @@ footer span {
           ✓ Deutlich höheres Einkommen<br>
           ✓ Freiheit & Erfüllung
         </p>
-        <a href="#" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
-          Ja, ich will erfolgreicher Skin Expert werden
-        </a>
+<a href="https://calendly.com/" target="_blank" class="cta-btn" data-aos="fade-up" data-aos-delay="900">
+  Ja, ich will erfolgreicher Skin Expert werden
+</a>
       </div>
     </div>
   </div>
