--- a/index.html
+++ b/index.html
@@ -1108,28 +1108,50 @@ footer span {
 <style>
 /* WHY ONLY BEAUTY Section */
 #why-only-beauty {
-  background: 
-    linear-gradient(135deg, rgba(0,0,0,0.2), rgba(0,0,0,0.15)),
-    url('https://images.unsplash.com/photo-1573461160327-b450ce3d8e7f?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=enecta-cannabis-extracts-80wCkpt-IKE-unsplash.jpg') center/cover no-repeat;
-  position: relative;
+  background: linear-gradient(135deg, #fefcf7 0%, #fef9f2 100%);
   padding: clamp(4rem, 8vw, 5rem) 0;
-  color: var(--white);
+  color: var(--black-soft);
+  position: relative;
 }
-
 #why-only-beauty::before {
   content: '';
   position: absolute;
   inset: 0;
-  /* subtle overlay if needed, optional */
-  background: rgba(0,0,0,0.15);
+  background: none; /* remove dark overlay */
   pointer-events: none;
 }
-
-#why-only-beauty .section-title {
-  font-size: clamp(1.8rem, 4vw, 2.4rem);
+#why-only-beauty .single-card {
+  max-width: 720px; /* wider */
+  margin: 2rem auto 0 auto;
+  background: #ffffff; /* solid white */
+  border-radius: 16px;
+  padding: clamp(2rem, 4vw, 3rem);
+  box-shadow: 0 8px 24px rgba(0,0,0,0.08); /* subtle shadow */
   text-align: center;
-  margin-bottom: 2rem;
-  color: var(--white);
+  color: var(--black-soft);
+}
+#why-only-beauty .single-card::before {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 4px;
+  background: var(--gold);
+  margin: 0 auto 1.5rem auto;
+  border-radius: 2px;
+}
+#why-only-beauty .animated-line {
+  opacity: 0;
+  transform: translateY(10px); /* less dramatic */
+  font-size: clamp(1rem, 1.8vw, 1.1rem);
+  margin: 1rem 0; /* more spacing */
+  font-weight: 500;
+  transition: all 0.6s ease-out;
+  color: var(--black-soft);
+}
+
+#why-only-beauty .animated-line.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .single-card {
