Center align CTA button in service card

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ body, p, span, a, li {
     
     .service-card .cta-btn {
       margin-top: auto;
-      align-self: flex-start;
+      align-self: center;
       font-size: clamp(0.9375rem, 2vw, 1.05rem);
       padding: clamp(0.75rem, 2vw, 0.875rem) clamp(1.5rem, 4vw, 2rem);
       min-width: auto;
