--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700;900&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -1465,6 +1468,36 @@ footer {
   /* REMOVED: border-top: 2px solid var(--gold); */
   border-top: none !important; 
   
+/* High-Fashion Editorial Look */
+h1, h2, h3, h4, .section-subtitle, .decision-banner span {
+  font-family: 'Cormorant Garamond', serif;
+  font-weight: 600; 
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: var(--black-soft);
+}
+
+/* Slim, elegant body text */
+body, p, span, a, li, .cta-btn {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300; /* Light weight for luxury feel */
+  letter-spacing: 0.5px;
+}
+
+/* Specific adjustment for the Main Hero Heading */
+.hero h1 {
+  font-family: 'Cormorant Garamond', serif;
+  font-style: italic; /* Italics add high-fashion flair */
+  text-transform: none; /* Keep lowercase for a softer, elite look */
+  font-weight: 300;
+  font-size: clamp(2.5rem, 5vw, 4rem);
+}
+.cta-btn {
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px; /* Wide spacing = luxury */
+  font-weight: 500;
+}
 
   </style>
 </head>
