--- a/index.html
+++ b/index.html
@@ -1528,17 +1528,12 @@ body, p, span, a, li, .cta-btn {
 
     <img src="Logo.svg" alt="Logo" class="hero-logo" data-aos="fade-in">
 
-    <div class="video-teaser-container" data-aos="zoom-in" data-aos-delay="200">
-      <video
-        autoplay
-        muted
-        loop
-        playsinline
-        class="hero-video-small"
-        poster="https://images.unsplash.com/photo-1560066984-138dadb4c035?q=80&w=1000">
-        <source src="https://assets.mixkit.co/videos/preview/mixkit-stylist-combing-the-hair-of-a-client-41500-large.mp4" type="video/mp4">
-      </video>
-    </div>
+<div class="video-teaser-container">
+  <video id="heroVideo" class="hero-video-small" autoplay muted loop playsinline preload="auto">
+    <source src="https://videos.pexels.com/video-files/8204095/8204095-uhd_3840_2160_25fps.mp4" type="video/mp4">
+  </video>
+</div>
+
 
     <h1 data-aos="fade-up" data-aos-delay="300">
       Ganzheitliche <span class="highlight-red">Hautgesundheit</span> –<br>
