Update video source in index.html

--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@ body, p, span, a, li, .cta-btn {
 
 <div class="video-teaser-container">
   <video id="heroVideo" class="hero-video-small" autoplay muted loop playsinline preload="auto">
-    <source src="https://videos.pexels.com/video-files/8204095/8204095-uhd_3840_2160_25fps.mp4" type="video/mp4">
+    <source src="Beauty.mp4" type="video/mp4">
   </video>
 </div>
 
