--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@ body, p, span, a, li, .cta-btn {
 <section id="sessions">
   <div class="container">
     <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">
-      FÜR KUNDINNEN – <span class="highlight-red">BEHANDLUNGEN</span>
+      <span class="highlight-red">BEHANDLUNGEN</span>
     </h2>
 
     <div class="services-grid">
